--- a/action.yml
+++ b/action.yml
@@ -21,4 +21,4 @@ runs:
   - uses: actions/setup-go@v2
     with:
       go-version: '1.9.3' # The Go version to download (if necessary) and use.
-  - run: go run hello.go
+  - run: go version
