--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Go
-      - uses: actions/setup-go@v2
+        uses: actions/setup-go@v2
         with:
           go-version: '1.9.3' # The Go version to download (if necessary) and use.
-      - run: go version
+        run: go version
