--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: '1.9.3' # The Go version to download (if necessary) and use.
-        run: go version
+      - run: go version
