--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,8 @@ jobs:
         with:
           go-version: '1.17.3' # The Go version to download (if necessary) and use.
       - run: go version
+
+      - name: Execute ddosify 
+        uses: ./
+        with:
+          args: ""
