--- a/action.yml
+++ b/action.yml
@@ -8,17 +8,12 @@ branding:
   icon: feather
 
 inputs:
-  test-plan-path:
-    required: true
-    description: jmeter test plan to execute
   args:
-    required: false
+    required: true
     description: Optional arguments. For more details https://jmeter.apache.org/usermanual/get-started.html#non_gui
 
 runs:
-  steps:
-  - uses: actions/checkout@master
-  - uses: actions/setup-go@v2
-    with:
-      go-version: '1.9.3' # The Go version to download (if necessary) and use.
-  - run: go version
+    using: "composite"
+    steps:
+      - run: ${{ github.action_path }}/script.sh
+        shell: bash 
