--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,8 @@ inputs:
 
 runs:
     using: "composite"
+    args:
+      - "${{ inputs.args }}"
     steps:
-      - run: ./script.sh
+      - run: ./script.sh ${{ inputs.args }}
         shell: bash 
