--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ author: NaveenKumar Namachivayam - https://qainsights.com
 
 branding:
   color: blue
-  icon: bar-chart-2
+  icon: zap
 
 inputs:
   args:
